# 3sem3labtask2

Class_Table/: CMakeLists.txt  Table.cpp  Table.h
Dialog/: CMakeLists.txt  Dialog.cpp  main.cpp
Dialog/cmake/: FindLibrary.cmake
Test/: script_test  test.cpp
cmake/: FindLibrary.cmake
